--- a/style.css
+++ b/style.css
@@ -375,7 +375,6 @@ blockquote {
 }
 
 .has-featured-image .main-header {
-	background-repeat: no-repeat;
 	background-size: cover;
 	height: 450px;
 }
@@ -402,23 +401,22 @@ blockquote {
 }
 
 .has-featured-image .main-header .header-group {
-	overflow: hidden;
 	padding-top: 2.25rem;
 	position: absolute;
 }
 
 .has-featured-image .main-header .header-group:before {
 	content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: -3.15rem;
-    background: rgba(0,0,0,0.7);
-    left: 0;
+	position: absolute;
+	width: 100%;
+	height: calc(100% - 3.15rem);
+	top: 0;
+	background: rgba(0,0,0,0.7);
+	left: 0;
 }
 
 .page.has-featured-image .main-header .header-group:before {
-	top: -1.85rem;
+	height: calc(100% - 1.85rem);
 }
 
 .has-featured-image .main-header .header-group h1 {
@@ -440,9 +438,9 @@ cite,
 
 /* Featured image information */
 .image-information {
-	bottom: 1rem;
+	bottom: 4rem;
 	position: absolute;
-	right: 1.5rem;
+	right: -184px;
 }
 
 .image-information svg {
@@ -463,6 +461,7 @@ cite,
 
 .wsm-box-overlay {
 	background: rgba(0,0,0,0.85);
+	display: none;
 	height: 100%;
 	left: 0;
 	overflow: hidden;
@@ -1085,7 +1084,7 @@ h2 + .article-section {
 	}
 
 	.has-featured-image .main-header .header-group:before {
-    	top: -3.45rem;
+		height: calc(100% - 3.45rem);
 	}
 
 	.home .halves .column,
@@ -1129,6 +1128,12 @@ h2 + .article-section {
 
 	.main-header .header-group {
 		max-width: 100%;
+	}
+
+	.image-information {
+		bottom: auto;
+		right: 1rem;
+		top: -2.5rem;
 	}
 
 	.wsm-box-image {
@@ -1196,13 +1201,14 @@ h2 + .article-section {
 
 @media screen and (max-width: 382px) {
 	.site-header-logo img {
-    	width: auto;
-    }
-    .home section:first-child .one a > div,
-    .single-wsu_magazine_issue section:first-child .one a > div {
-    	margin-top: -94px;
-    }
-}
+		width: auto;
+	}
+
+	.home section:first-child .one a > div,
+	.single-wsu_magazine_issue section:first-child .one a > div {
+		margin-top: -94px;
+	}
+
 }
 
 /* Old WSM styles to preserve in 2015 redesign */
